--- a/assets/css/imports/_filelist.scss
+++ b/assets/css/imports/_filelist.scss
@@ -59,16 +59,20 @@ $active-file-color:lighten($five, 2%);
     cursor: pointer;
     border-radius: 5px;
     color:$two;
-    width:94%;
+    width:100%;
     height:100px;
     border: 1px solid $five;
     border-radius: 6px;
     padding: 20px;
     text-align:center;
     position: relative;
+    transition: all 0.3s ease-out;
     &.highlight, &:hover {
         color:$six;
         border-color: $six;
+    }
+    input{
+        cursor: pointer;
     }
   }
   #file-upload-field {
