--- a/views/slate.pug
+++ b/views/slate.pug
@@ -14,12 +14,12 @@ block content
                         | slate: wiggly-obsidian
             include partials/config-form.pug
             .break.col-12
-            #golem-slate-filelist.ui-col
+            #golem-slate-filelist.ui-col.align-self-stretch
                 #filelist
                     include partials/filelist.pug
-            #golem-slate-editor.ui-col
+            #golem-slate-editor.ui-col.align-self-stretch
                 #editor-container
-            #golem-slate-output.ui-col
+            #golem-slate-output.ui-col.align-self-stretch
                 #output-container
 
 block append footer
