--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2932,6 +2932,35 @@ template {
 .bg-five {
   background-color: #EE6C4D; }
 
+html {
+  font-size: 16px;
+  line-height: 1.4em;
+  font-family: 'Space Mono', monospace;
+  color: #98C1D9;
+  font-weight: 400; }
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; }
+
+body {
+  background-color: #EE6C4D;
+  background-image: linear-gradient(90deg, rgba(238, 108, 77, 0.8), rgba(255, 0, 0, 0) 80%), linear-gradient(180deg, #3d5280, rgba(0, 255, 0, 0) 70.71%), linear-gradient(137deg, #ee594d, rgba(0, 0, 255, 0) 70.71%); }
+  body * {
+    box-sizing: border-box;
+    scrollbar-color: #98C1D9 transparent; }
+    body * ::-webkit-scrollbar {
+      width: 6px; }
+    body * ::-webkit-scrollbar-track {
+      background: transparent !important; }
+    body * ::-webkit-scrollbar-thumb {
+      background-color: #98C1D9;
+      border-radius: 20px;
+      border: 3px solid #98C1D9; }
+
 #golem-slate-ui-wrap {
   position: relative;
   background-color: #293241;
@@ -2947,6 +2976,20 @@ template {
   @media (min-width: 1200px) {
     #golem-slate-ui-wrap {
       height: 90vh; } }
+  #golem-slate-ui-wrap.small {
+    width: 90vw;
+    max-width: 500px;
+    max-height: 50vh !important;
+    min-height: auto;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+    @media (min-width: 1200px) {
+      #golem-slate-ui-wrap.small {
+        height: 40vh !important;
+        min-height: 40vh !important;
+        max-height: 40vh !important; } }
   #golem-slate-ui-wrap:after {
     content: "";
     position: absolute;
@@ -2979,22 +3022,29 @@ template {
       @media (min-width: 1200px) {
         #golem-slate-ui-wrap #golem-slate-container .ui-col {
           width: auto;
+          height: calc(100% - 120px); } }
+      @media only screen and (min-width: 1440px) {
+        #golem-slate-ui-wrap #golem-slate-container .ui-col {
           height: calc(100% - 60px); } }
       #golem-slate-ui-wrap #golem-slate-container .ui-col.closed {
         flex: 0 0 auto !important;
         font-size: 0; }
     #golem-slate-ui-wrap #golem-slate-container #golem-slate-nav {
       width: 100%;
-      order: 1; }
-      @media (min-width: 1200px) {
+      order: 1;
+      align-items: flex-start;
+      justify-content: center; }
+      @media only screen and (min-width: 1440px) {
         #golem-slate-ui-wrap #golem-slate-container #golem-slate-nav {
-          width: auto; } }
+          width: auto;
+          align-items: center; } }
     #golem-slate-ui-wrap #golem-slate-container .form-control {
       flex: 1;
       order: 4; }
       @media (min-width: 1200px) {
         #golem-slate-ui-wrap #golem-slate-container .form-control {
-          order: 2; } }
+          order: 2;
+          align-items: flex-start; } }
     #golem-slate-ui-wrap #golem-slate-container #golem-slate-filelist {
       display: flex;
       flex-direction: column;
@@ -3021,7 +3071,7 @@ template {
           margin: 0; } }
       #golem-slate-ui-wrap #golem-slate-container #golem-slate-editor #editor-container {
         width: 100%;
-        height: 100%; }
+        height: 93%; }
     #golem-slate-ui-wrap #golem-slate-container #golem-slate-output {
       border-top: 1px solid #3D5A80;
       transition: flex 0.8s cubic-bezier(0.49, -0.32, 0.25, 1.23);
@@ -3035,7 +3085,28 @@ template {
         #golem-slate-ui-wrap #golem-slate-container #golem-slate-output {
           border-top: none;
           border-left: 1px solid #3D5A80;
-          max-width: 35%; } }
+          max-width: 30%; } }
+
+.notify {
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  transform: translate(0, 100%);
+  opacity: 0;
+  animation: slideup 0.2s ease-in 0s 1 forwards;
+  padding: .1rem .5rem;
+  border-radius: .2rem; }
+  .notify.notify-success {
+    color: #293241;
+    background: #9FCC2E; }
+  .notify.notify-fail {
+    color: #293241;
+    background: #EE6C4D; }
+
+@keyframes slideup {
+  to {
+    transform: translate(0, 0);
+    opacity: 1; } }
 
 .filelist-wrapper {
   margin: 30px auto 0;
@@ -3048,7 +3119,6 @@ template {
     .filelist-wrapper ul li {
       padding: 7px 10px;
       position: relative;
-      display: flex;
       transition: all .3s ease-out;
       color: #3D5A80;
       border-bottom: 1px solid #3D5A80;
@@ -3067,7 +3137,7 @@ template {
         overflow-x: initial; }
       .filelist-wrapper ul li.open-in-editor {
         background: #ef7456;
-        color: #293241; }
+        color: #E0FBFC; }
         .filelist-wrapper ul li.open-in-editor:hover {
           color: #E0FBFC; }
         .filelist-wrapper ul li.open-in-editor:after {
@@ -3188,6 +3258,12 @@ select:-moz-focusring {
   flex-direction: column;
   width: 100%; }
   @media (min-width: 768px) {
+    .form-control {
+      flex-direction: row;
+      align-items: flex-end;
+      justify-content: center;
+      flex-wrap: nowrap; } }
+  @media only screen and (min-width: 1440px) {
     .form-control {
       flex-direction: row;
       align-items: flex-end;
@@ -3560,34 +3636,5 @@ input:invalid, select:invalid {
 .cm-s-golem-slate-console .CodeMirror-matchingbracket {
   outline: 1px solid grey;
   color: white !important; }
-
-html {
-  font-size: 16px;
-  line-height: 1.4em;
-  font-family: 'Space Mono', monospace;
-  color: #98C1D9;
-  font-weight: 400; }
-
-html, body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden; }
-
-body {
-  background-color: #EE6C4D;
-  background-image: linear-gradient(90deg, rgba(238, 108, 77, 0.8), rgba(255, 0, 0, 0) 80%), linear-gradient(180deg, #3d5280, rgba(0, 255, 0, 0) 70.71%), linear-gradient(137deg, #ee594d, rgba(0, 0, 255, 0) 70.71%); }
-  body * {
-    box-sizing: border-box;
-    scrollbar-color: #98C1D9 transparent; }
-    body * ::-webkit-scrollbar {
-      width: 6px; }
-    body * ::-webkit-scrollbar-track {
-      background: transparent !important; }
-    body * ::-webkit-scrollbar-thumb {
-      background-color: #98C1D9;
-      border-radius: 20px;
-      border: 3px solid #98C1D9; }
 
 /*# sourceMappingURL=style.css.map */
