Work in progress

--- a/views/error.pug
+++ b/views/error.pug
@@ -10,5 +10,5 @@ block content
         .col-12(style="text-align:center")
           h2 Oops. Something went wrong.
           p Click below to return to safety.
-          a.btn.mt-5(href="/s/")
+          a.btn.mt-5(href="/")
             |Back to SLATE
