--- a/views/slate.pug
+++ b/views/slate.pug
@@ -11,7 +11,7 @@ block content
                 .logo
                     img(src="/images/golem-slate-logo.svg")
                     span.text-five.slate-name
-                        | slate: wiggly-obsidian
+                        | slate: !{slate}
             include partials/config-form.pug
             .break.col-12
             #golem-slate-filelist.ui-col.align-self-stretch
