--- a/assets/css/imports/_fonts.scss
+++ b/assets/css/imports/_fonts.scss
@@ -3,9 +3,10 @@
     font-family: 'Space Mono';
     font-style: normal;
     font-weight: 400;
+    /*
     src: local(''),
-         url('/fonts/space-mono-v6-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/fonts/space-mono-v6-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+         url('/fonts/space-mono-v6-latin-regular.woff2') format('woff2'),
+         url('/fonts/space-mono-v6-latin-regular.woff') format('woff'); */
   }
   
   /* space-mono-italic - latin */
@@ -13,9 +14,10 @@
     font-family: 'Space Mono';
     font-style: italic;
     font-weight: 400;
+    /*
     src: local(''),
-         url('/fonts/space-mono-v6-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/fonts/space-mono-v6-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+         url('/fonts/space-mono-v6-latin-italic.woff2') format('woff2'),
+         url('/fonts/space-mono-v6-latin-italic.woff') format('woff'); */
   }
   
   /* space-mono-700italic - latin */
@@ -23,9 +25,10 @@
     font-family: 'Space Mono';
     font-style: italic;
     font-weight: 700;
+    /*
     src: local(''),
-         url('/fonts/space-mono-v6-latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/fonts/space-mono-v6-latin-700italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+         url('/fonts/space-mono-v6-latin-700italic.woff2') format('woff2'),
+         url('/fonts/space-mono-v6-latin-700italic.woff') format('woff');  */
   }
   
   /* space-mono-700 - latin */
@@ -33,8 +36,9 @@
     font-family: 'Space Mono';
     font-style: normal;
     font-weight: 700;
+    /*
     src: local(''),
-         url('/fonts/space-mono-v6-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/fonts/space-mono-v6-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+         url('/fonts/space-mono-v6-latin-700.woff2') format('woff2'), 
+         url('/fonts/space-mono-v6-latin-700.woff') format('woff'); */
   }
   
