--- a/assets/css/imports/_variables.scss
+++ b/assets/css/imports/_variables.scss
@@ -1,7 +1,8 @@
 // colors
 
 $one:#293241;
-$two:#3D5A80;
+$two:lighten(#3D5A80,13%);
+$two-dark:#3D5A80;
 $three:#98C1D9;
 $four:#E0FBFC;
 $five:#EE6C4D;
