--- a/assets/css/imports/_filelist.scss
+++ b/assets/css/imports/_filelist.scss
@@ -1,13 +1,23 @@
 $bg-hover-color:lighten($one, 2%);
 $active-file-color:lighten($five, 2%);
+.refresh-wrap{
+    margin: 0 0 20px;
+}
 .filelist-wrapper {
-    margin: 30px auto 0;
     width: 100%;
     max-width: 100%;
+    display:inline-flex;
+    flex: 1;
+    overflow:scroll;
+    max-height:200px;
+    @include media-breakpoint-up(xl) {
+        max-height:100%;
+    }
     ul {
         list-style: none;
         margin: 0;
         padding: 0;
+        width:98%;
         li {
             padding: 7px 10px;
             position: relative;
@@ -57,7 +67,7 @@ $active-file-color:lighten($five, 2%);
     padding: 10px;
     cursor: pointer;
     border-radius: 5px;
-    color:$two;
+    color:$five;
     width:100%;
     height:100px;
     border: 1px solid $five;
@@ -66,6 +76,7 @@ $active-file-color:lighten($five, 2%);
     text-align:center;
     position: relative;
     transition: all 0.3s ease-out;
+    margin-bottom:30px;
     &.highlight, &:hover {
         color:$six;
         border-color: $six;
