--- a/assets/css/imports/_html.scss
+++ b/assets/css/imports/_html.scss
@@ -17,8 +17,10 @@ html{
   body{
     background-color: $five;
     background-image: linear-gradient(90deg, rgba($five,0.8), rgba(255,0,0,0) 80%),
-                linear-gradient(180deg, adjust-hue($two, 7deg), rgba(0,255,0,0) 70.71%),
+                linear-gradient(180deg, adjust-hue($two-dark, 7deg), rgba(0,255,0,0) 70.71%),
                 linear-gradient(137deg, adjust-hue($five, -7deg), rgba(0,0,255,0) 70.71%);
+    background-size:cover;
+    background-repeat: no-repeat;
     *{
       box-sizing: border-box;
       scrollbar-color:$three transparent;
