--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3024,7 +3024,6 @@ body {
         #golem-slate-ui-wrap #golem-slate-container #golem-slate-filelist {
           border-bottom: none;
           border-right: 1px solid #537aad;
-          min-width: 20%;
           max-width: 20%;
           order: 3; } }
       #golem-slate-ui-wrap #golem-slate-container #golem-slate-filelist #filelist {
@@ -3052,7 +3051,29 @@ body {
       transition: flex 0.8s cubic-bezier(0.49, -0.32, 0.25, 1.23);
       flex: 1;
       min-height: 40vh;
-      order: 5; }
+      order: 5;
+      position: relative; }
+      #golem-slate-ui-wrap #golem-slate-container #golem-slate-output .expand-btn {
+        position: absolute;
+        top: 50%;
+        left: -28px;
+        transform: translate(0, -50%);
+        display: inline-block;
+        width: 28px;
+        height: 28px;
+        padding: 3px;
+        border: 1px solid #537aad;
+        border-right: none;
+        display: inline-flex;
+        align-items: center;
+        justify-content: flex-start; }
+        #golem-slate-ui-wrap #golem-slate-container #golem-slate-output .expand-btn a {
+          display: block;
+          transition: color .5s ease-out;
+          transform: rotate(90deg);
+          line-height: 0em; }
+          #golem-slate-ui-wrap #golem-slate-container #golem-slate-output .expand-btn a:hover {
+            color: #9FCC2E; }
       #golem-slate-ui-wrap #golem-slate-container #golem-slate-output #output-container {
         width: 100%;
         height: 100%;
@@ -3087,6 +3108,12 @@ body {
   to {
     transform: translate(0, 0);
     opacity: 1; } }
+
+@media (min-width: 1200px) {
+  #golem-slate-ui-wrap.running-pen #golem-slate-editor {
+    max-width: 30% !important; }
+  #golem-slate-ui-wrap.running-pen #golem-slate-output {
+    max-width: 70% !important; } }
 
 .refresh-wrap {
   margin: 0 0 20px; }
