--- a/assets/css/imports/_top-nav.scss
+++ b/assets/css/imports/_top-nav.scss
@@ -16,12 +16,14 @@
          display:flex;
          flex-wrap:wrap;
          align-items: center;
+         justify-content: center;
          @include media-breakpoint-up(lg){
-            flex-wrap:wrap;
+            flex-wrap:nowrap;
+            justify-content: flex-start;
          }
          img{
              display:inline-block;
-             margin:0 2rem .8rem 0;
+             margin:0 auto .8rem;
              height:30px;
              width: auto;
              @include media-breakpoint-up(lg){
