--- a/views/partials/config-form.pug
+++ b/views/partials/config-form.pug
@@ -1,7 +1,7 @@
 //- markup
 //- the action URL needs to be improved!
 .form-control.flex-auto
-	form(id="golem-config-form" action="/s/run/" method="POST")
+	form(id="golem-config-form" action="" method="POST")
 		.form-group
 			label(for="cpuSelect")
 				svg.bi(width='16' height='16' fill='currentColor')
@@ -50,10 +50,18 @@
 					|crtcfyhuinuio
 
 		.form-group.no-border
-			button(type="submit" value="Run" id="submit" class="btn")
+			button(type="submit" value="Run" id="submitPen" class="btn" title='Run Slate')
 				svg.bi(width='16' height='16' fill='currentColor')
 					use(xlink:href='/icons.svg#play-fill')
-				|Run
+				//- |Run
+			button.red(value="Stop" id="stopPen" class="btn" title='Stop Slate' disabled="disabled")
+				svg.bi(width='16' height='16' fill='currentColor')
+					use(xlink:href='/icons.svg#stop-fill')
+				//- |Stop
+			button(value="Reset" id="resetPen" class="btn" title='Reset Slate')
+				svg.bi(width='16' height='16' fill='currentColor')
+					use(xlink:href='/icons.svg#bootstrap-reboot')
+				//- |Reset
 
 //- JS
 
