--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@
 @import "imports/variables";
 @import "imports/html";
 
+@import "imports/modals";
 @import "imports/golpen-ui";
 @import "imports/filelist";
 @import "imports/top-nav";
