--- a/assets/css/imports/_golpen-ui.scss
+++ b/assets/css/imports/_golpen-ui.scss
@@ -12,7 +12,7 @@
     height:auto;
     min-height: 90vh;
     box-shadow: 0rem 2rem 20px -15px rgba($one,.5);
-    @include media-breakpoint-up(xl) {
+    @media only screen and (min-width:1440px) {
         height: 90vh;
     }
     margin: 5vh auto;
@@ -27,7 +27,7 @@
         top:40%;
         left:50%;
         transform: translate(-50%,-50%);
-        @include media-breakpoint-up(xl) {
+        @media only screen and (min-width:1440px) {
             max-height:50vh !important;
             min-height:50vh !important;
         }
@@ -53,7 +53,7 @@
         width: 100%;
         height:100%;
         flex: 1;
-        @include media-breakpoint-up(xl) {
+        @media only screen and (min-width:1440px) {
             flex-direction:row;
             flex-wrap: wrap;
         }
@@ -62,7 +62,7 @@
             height:auto;
             padding:1rem;
             position: relative;
-            @include media-breakpoint-up(xl) {
+            @media only screen and (min-width:1440px) {
                 width:auto;
                 height:calc(100% - 120px);
             }
@@ -88,7 +88,7 @@
         .form-control{
             flex:1;
             order: 4;
-            @include media-breakpoint-up(xl) {
+            @media only screen and (min-width:1440px) {
                 order: 2;
                 align-items: flex-start;
             }
@@ -98,10 +98,10 @@
             flex-direction:column;
             border-bottom:1px solid $two;
             order:2;
-            @include media-breakpoint-up(xl) {
+            @media only screen and (min-width:1440px) {
                 border-bottom:none;
                 border-right:1px solid $two;
-                max-width:20%;
+                width:25%;
                 order: 3;
             }
             transition: flex .8s $transition-base;
@@ -116,7 +116,8 @@
           min-height: 40vh;
           order: 3;
           margin: 0 0 1rem 0;
-          @include media-breakpoint-up(xl) {
+          padding-right: 2.2rem;
+          @media only screen and (min-width:1440px) {
             order:4;
             margin: 0;
           }
@@ -124,7 +125,7 @@
               width:100%;
               height:93%;
               padding-bottom:50px;
-              @include media-breakpoint-up(xl) {
+              @media only screen and (min-width:1440px) {
                 padding-bottom:0px;
               }
           }
@@ -147,10 +148,12 @@
                 height:28px;
                 padding:3px;
                 border:1px solid $two;
-                border-right: none;
-                display: inline-flex;
                 align-items: center;
                 justify-content:flex-start;
+                display: none;
+                @media only screen and (min-width:1440px) {
+                    display: inline-flex !important;
+                }
                 a{
                     display:block;
                     transition: color .5s ease-out;
@@ -163,17 +166,18 @@
             }
             #output-container{
                 width:100%;
-                height:100%;
+                height:50vh;
                 max-height: 50vh;
-                overflow: scroll;
-                @include media-breakpoint-up(xl) {
+                overflow: auto;
+                @media only screen and (min-width:1440px) {
+                    height:100%;
                     max-height:100%;
                 }
             }
-            @include media-breakpoint-up(xl) {
+            @media only screen and (min-width:1440px) {
                 border-top:none;
                 border-left:1px solid $two;
-                max-width:30%;
+                max-width:25%;
             }
       }
     }
@@ -206,13 +210,33 @@
 }
 
 // Expand console styles
-@include media-breakpoint-up(xl) {
+@media only screen and (min-width:1440px) {
     #golem-slate-ui-wrap.running-pen{
+        position: relative;
         #golem-slate-editor{
-            max-width:30% !important;
+            // max-width:20% !important;
+            // pointer-events: none;
+            // opacity: .2;
+            max-width: 80% !important;
+            width:80% !important;
+            pointer-events: none;
+            opacity: 0;
+            position: absolute;
+            top:60px;
+            right:0;
+            z-index: 0;
         }
         #golem-slate-output{
-            max-width:70% !important;
+            // max-width:80% !important;
+            max-width:75% !important;
+            position: absolute;
+            top:0;
+            right:0;
+            z-index: 100;
+            padding-left: 2.2rem;
+            .expand-btn{
+                left: 0px !important;
+            }
         }
     }
 }
