--- a/assets/css/imports/bootstrap/_variables.scss
+++ b/assets/css/imports/bootstrap/_variables.scss
@@ -8,7 +8,8 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1200px
+  xl: 1200px,
+  xxl: 1440px
 ) !default;
 
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
